# MCP-Legifrance-Vector

./: README.md  pyproject.toml  server.py
