[project]
name = "mcp-legifrance-vector"
version = "0.1.1"
description = "Serveur MCP pour recherche sémantique dans les datasets AgentPublic (Service-Public et LEGI)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "PieceMaker Legal", email = "contact@piecemaker.legal" }
]
keywords = ["mcp", "semantic-search", "legifrance", "legi", "service-public"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.0.0",
    "huggingface_hub>=0.20.0",
    "FlagEmbedding>=1.2.0",
    "mcp>=0.1.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/PieceMaker-Legal/MCP-Legifrance-Vector"
Repository = "https://github.com/PieceMaker-Legal/MCP-Legifrance-Vector"
Issues = "https://github.com/PieceMaker-Legal/MCP-Legifrance-Vector/issues"

[project.scripts]
mcp-legifrance-vector = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server.py"]
include = ["server.py"]
